hackbot-kmod/hackbot_types.rs

// SPDX-License-Identifier: GPL-2.0

//! Type definitions for the hackbot kernel module.
//! ModelConfig, Q8Ref, LayerRef, ModelSlot, and extern C declarations.

use crate::config::*;

/// Parsed model configuration from the binary header.
///
/// Fields marked `#[allow(dead_code)]` are part of the binary file format
/// (parsed in hackbot_model.rs) but not currently consumed at runtime —
/// `seq_len` is overridden by INFERENCE_MAX_SEQ, `kv_dim` is computed from
/// `n_kv_heads * head_dim`, and `rope_theta` is hardcoded in hackbot_fpu.c.
/// Keep them to preserve round-trip with the Python exporter and to document
/// the on-disk layout for future use.
#[derive(Copy, Clone)]
pub(crate) struct ModelConfig {
    pub(crate) dim: u32,
    pub(crate) hidden_dim: u32,
    pub(crate) n_layers: u32,
    pub(crate) n_heads: u32,
    pub(crate) n_kv_heads: u32,
    pub(crate) vocab_size: u32,
    #[allow(dead_code)] pub(crate) seq_len: u32,
    pub(crate) group_size: u32,
    pub(crate) head_dim: u32,
    #[allow(dead_code)] pub(crate) kv_dim: u32,
    #[allow(dead_code)] pub(crate) rope_theta: u32,
}

impl ModelConfig {
    pub(crate) const ZERO: Self = Self {
        dim: 0, hidden_dim: 0, n_layers: 0, n_heads: 0, n_kv_heads: 0,
        vocab_size: 0, seq_len: 0, group_size: 0, head_dim: 0, kv_dim: 0,
        rope_theta: 0,
    };
}

/// Reference to a quantized INT8 weight matrix within the firmware blob.
///
/// `rows`/`cols` are recorded for documentation / future use. The matmul
/// callers in hackbot_forward.rs pass these dimensions explicitly from the
/// model config, so the Q8Ref copies are not read at runtime today.
#[derive(Copy, Clone)]
pub(crate) struct Q8Ref {
    pub(crate) data_off: usize,
    pub(crate) scale_off: usize,
    #[allow(dead_code)] pub(crate) rows: usize,
    #[allow(dead_code)] pub(crate) cols: usize,
}

impl Q8Ref {
    pub(crate) const ZERO: Self = Self { data_off: 0, scale_off: 0, rows: 0, cols: 0 };
}

/// Weight references for a single transformer layer.
#[derive(Copy, Clone)]
pub(crate) struct LayerRef {
    pub(crate) rms_att_off: usize,
    pub(crate) wq: Q8Ref,
    pub(crate) wk: Q8Ref,
    pub(crate) wv: Q8Ref,
    pub(crate) wo: Q8Ref,
    pub(crate) rms_ffn_off: usize,
    pub(crate) gate: Q8Ref,
    pub(crate) up: Q8Ref,
    pub(crate) down: Q8Ref,
}

impl LayerRef {
    pub(crate) const ZERO: Self = Self {
        rms_att_off: 0,
        wq: Q8Ref::ZERO, wk: Q8Ref::ZERO, wv: Q8Ref::ZERO, wo: Q8Ref::ZERO,
        rms_ffn_off: 0,
        gate: Q8Ref::ZERO, up: Q8Ref::ZERO, down: Q8Ref::ZERO,
    };
}

/// Global model state. Stored in a Mutex via global_lock!.
/// Raw pointers stored as usize to satisfy Send/Sync requirements.
pub(crate) struct ModelSlot {
    pub(crate) loaded: bool,
    pub(crate) data_addr: usize,
    pub(crate) data_len: usize,
    pub(crate) tok_offsets_addr: usize,
    pub(crate) config: ModelConfig,
    pub(crate) tok_section_off: usize,
    pub(crate) embed: Q8Ref,
    pub(crate) layers: [LayerRef; MODEL_MAX_LAYERS],
    pub(crate) rms_final_off: usize,

    // --- Inference state ---
    pub(crate) inf_buf_addr: usize,
    pub(crate) inf_buf_len: usize,
    pub(crate) inf_kv_len: usize,
    pub(crate) inf_x: usize,
    pub(crate) inf_xb: usize,
    pub(crate) inf_xb2: usize,
    pub(crate) inf_q: usize,
    pub(crate) inf_k: usize,
    pub(crate) inf_v: usize,
    pub(crate) inf_att: usize,
    pub(crate) inf_hb: usize,
    pub(crate) inf_hb2: usize,
    pub(crate) inf_logits: usize,

    // --- Tokenizer state ---
    pub(crate) sorted_vocab_addr: usize,
    pub(crate) byte_to_token: [u32; 256],

    // --- Format v2: FP16/float32 FPU ---
    pub(crate) format_version: u32,
    pub(crate) fpu_state: usize,
    pub(crate) weights_off: usize,
}

/// Device-global response state shared across all open file descriptors.
pub(crate) struct SharedResponse {
    pub(crate) data: [u8; MAX_RESPONSE_SIZE],
    pub(crate) len: usize,
    pub(crate) ready: bool,
}

// Kernel version string, auto-generated by Kbuild from KERNELRELEASE.
#[path = "kernel_version.rs"]
pub(crate) mod kernel_version;

// avenrun[] is EXPORT_SYMBOL but not included in bindgen output for
// out-of-tree modules. Declare it manually.
extern "C" {
    /// Load averages as fixed-point unsigned long[3] (FSHIFT=11).
    pub(crate) static avenrun: [core::ffi::c_ulong; 3];

    // --- hackbot_fpu.c: float32 forward pass using kernel FPU ---

    pub(crate) fn hackbot_fpu_alloc(
        dim: i32, hidden_dim: i32, n_layers: i32,
        n_heads: i32, n_kv_heads: i32, head_dim: i32,
        vocab_size: i32, max_seq: i32,
    ) -> *mut core::ffi::c_void;

    pub(crate) fn hackbot_fpu_free(state: *mut core::ffi::c_void);

    pub(crate) fn hackbot_fpu_reset(state: *mut core::ffi::c_void);

    pub(crate) fn hackbot_fpu_forward(
        state: *mut core::ffi::c_void,
        weights: *const core::ffi::c_void,
        weights_len: usize,
        token_id: i32,
        pos: i32,
    ) -> i32;

    pub(crate) fn hackbot_fpu_get_next_token(state: *const core::ffi::c_void) -> i32;

    // --- hackbot_console.c: kernel log ring buffer via console driver ---

    pub(crate) fn hackbot_console_init() -> i32;
    pub(crate) fn hackbot_console_exit();
    /// Read last `maxlen` bytes from the console ring buffer. Returns bytes copied.
    pub(crate) fn hackbot_console_read(out: *mut u8, maxlen: i32) -> i32;

    // --- hackbot_files.c: open file descriptor listing ---

    /// List open FDs for a process. Returns bytes written, or -errno on error.
    pub(crate) fn hackbot_list_fds(pid: i32, out: *mut u8, maxlen: i32) -> i32;

    // --- hackbot_kprobe.c: kprobe instrumentation ---

    /// Attach a kprobe to a kernel function. Returns 0 on success, -errno on error.
    pub(crate) fn hackbot_kprobe_attach(symbol: *const u8, len: i32) -> i32;
    /// List active kprobes with hit counts. Returns bytes written.
    pub(crate) fn hackbot_kprobe_check(out: *mut u8, maxlen: i32) -> i32;
    /// Detach a kprobe. Returns 0 on success, -errno on error.
    pub(crate) fn hackbot_kprobe_detach(symbol: *const u8, len: i32) -> i32;
    /// Unregister all active kprobes (called on module unload).
    pub(crate) fn hackbot_kprobe_cleanup();

    // --- hackbot_patrol.c: autonomous patrol kthread ---

    /// Start the patrol kthread. Returns 0 on success, -errno on failure.
    pub(crate) fn hackbot_patrol_start() -> i32;
    /// Stop the patrol kthread and wait for exit.
    pub(crate) fn hackbot_patrol_stop();

    // --- hackbot_trace.c: continuous tracepoint sensing (Layer 0) ---

    /// Initialize tracepoint sensing. Registers sched_switch, sys_enter, block_rq_complete.
    pub(crate) fn hackbot_trace_init() -> i32;
    /// Shutdown tracepoint sensing. Unregisters all callbacks.
    pub(crate) fn hackbot_trace_exit();
    /// Read scheduler trace summary. Returns bytes written.
    pub(crate) fn hackbot_trace_read_sched(out: *mut u8, maxlen: i32) -> i32;
    /// Read syscall trace summary. Returns bytes written.
    pub(crate) fn hackbot_trace_read_syscall(out: *mut u8, maxlen: i32) -> i32;
    /// Read I/O trace summary. Returns bytes written.
    pub(crate) fn hackbot_trace_read_io(out: *mut u8, maxlen: i32) -> i32;
    /// Read raw scheduler events. Returns bytes written.
    pub(crate) fn hackbot_trace_read_sched_raw(out: *mut u8, maxlen: i32, count: i32) -> i32;
    /// Read raw syscall events. Returns bytes written.
    pub(crate) fn hackbot_trace_read_syscall_raw(out: *mut u8, maxlen: i32, count: i32) -> i32;
    /// Read raw I/O events. Returns bytes written.
    pub(crate) fn hackbot_trace_read_io_raw(out: *mut u8, maxlen: i32, count: i32) -> i32;
    /// Read semantic token ring buffer. Returns bytes written.
    pub(crate) fn hackbot_trace_read_tokens(out: *mut u8, maxlen: i32, count: i32) -> i32;
    /// Read n-gram surprise scores. Returns bytes written.
    pub(crate) fn hackbot_trace_read_ngram_surprise(out: *mut u8, maxlen: i32) -> i32;
    /// Read n-gram model statistics. Returns bytes written.
    pub(crate) fn hackbot_trace_read_ngram_stats(out: *mut u8, maxlen: i32) -> i32;
    /// Read n-gram alerts. Returns bytes written.
    pub(crate) fn hackbot_trace_read_ngram_alerts(out: *mut u8, maxlen: i32, count: i32) -> i32;
    /// Reset "since last reset" counters.
    pub(crate) fn hackbot_trace_reset();
}

// Compile-time check: avenrun declaration assumes 64-bit unsigned long.
const _: () = assert!(
    core::mem::size_of::<core::ffi::c_ulong>() == 8,
    "avenrun extern assumes 64-bit unsigned long (x86_64 only)"
);
